--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,4 @@
-/**
+  /**
 * Template Name: Presento - v1.1.1
 * Template URL: https://bootstrapmade.com/presento-bootstrap-corporate-template/
 * Author: BootstrapMade.com
@@ -501,7 +501,9 @@ nav {
   height: 2px;
   background-color: #e03a3c; /* Red color for the line */
   margin-top: 10px; /* Space between slider and the line */
+  box-shadow: 0px 4px 6px rgba(224, 58, 60, 0.5); /* Red shadow effect */
 }
+
 
 /* Individual Slide */
 .slide {
@@ -732,7 +734,7 @@ nav {
 #about-us dotlottie-wc {
   width: 140%;
   height: auto;
-  margin-right: 5%;
+  margin-left: -20%;
 }
 
 /* Blockquote Styling */
@@ -971,18 +973,20 @@ section {
   justify-content: center;
   align-items: center;
   margin-top: 10px; /* Reduced margin-top to decrease the gap */
-  margin-bottom: 30px;
+  margin-bottom: -150px;
+
 }
 
 #values .container {
   height: 100%; /* Ensure the container occupies the full height of the section */
+  margin-bottom: 10%;
 }
 
 #values h2 {
   color: #e03a3c; /* Red color for the section heading */
   margin-bottom: 30px;
   font-weight: bold;
-  font-size: 2rem; /* Adjusted font size */
+  font-size: 3rem; /* Adjusted font size */
 }
 
 /* Values Cards Wrapper */
@@ -1009,7 +1013,7 @@ section {
   background-color: #fff; /* White background */
   border: 2px solid #e03a3c; /* Red border for the card */
   border-radius: 8px;
-  width: 280px; /* Default card width */
+  width: 380px; /* Default card width */
   margin: 10px 10px 20px 10px; /* Added bottom margin to cards */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect for cards */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover effect */
@@ -1032,14 +1036,14 @@ section {
 
 #values .card-title {
   color: #e03a3c; /* Red color for card titles */
-  font-size: 1.2em; /* Slightly smaller title */
+  font-size: 2.0em; /* Slightly smaller title */
   font-weight: bold;
   margin-bottom: 8px; /* Reduced margin below the title */
 }
 
 #values .card-text {
   color: #000; /* Black color for the card text */
-  font-size: 0.85em; /* Reduced font size */
+  font-size: 1.0em; /* Reduced font size */
   line-height: 1.4; /* Adjusted line height for readability */
   margin-bottom: 12px; /* Reduced space below the paragraph */
 }
